“Fixed the overlapping copyright text.”

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -96,7 +96,7 @@ h1 {
 }
 
 #copyright {
-  position: fixed;
+  position: static;
   width: 1000px;
   text-align: center;
   bottom: 20px;
